# MessageLogger

./: .gitignore  CMakeLists.txt  README.md
include/: MessageLogger.hpp
src/: MessageLogger.cpp
test/: console_output.cpp  log_file_output.cpp
